--- a/astahm2t/template/sample.vm
+++ b/astahm2t/template/sample.vm
@@ -4,3 +4,17 @@ ${c.name}::${c.name}(Roomba* create){
 }
 ${c}::~${c.name}(){}
 
+#if($s){
+void ${c.name}::transition(){
+  switch(${u.stateInstance}){
+  #foreach($state in $u.states)
+  case ${u.toFirstLower(state)}:
+    #foreach($t in $state.outgoings)
+    if(){}
+    #end
+    #foreach($t in $state.outgoings){%>\
+    ${state.exit}; // ${state.name} exit action;
+    #end
+  #end
+}
+#end
